# growing-neural-gas

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: GNG.h  Image.h
include/Graph/: Graph.h  Node.tpp
instructions/: instructions.md
src/: Edge.h  GNG.cpp  GNG.h  Graph.h  Graph.tpp  Image.cpp  Image.h  Node.h  Node.tpp  Sobel.cpp  Sobel.h  gng_ex.cpp  graph_ex.cpp  main.cpp
